--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="card-footer">
           <!--Added activation to button-->
-          <button id="generate" class="btn" onclick="myFunction()">Generate Password</button>
+          <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
